# TravisPostWar

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/: draw.h  gamefeatures.h  loop.h  sound.h  video.h
source/: PostWar.cpp  gamefeatures.h  main.cpp
source/GameFeatures/: blit_tela.cpp  menu.cpp
source/GameFeatures/Creditos/: creditos.cpp
source/GameFeatures/Jogar/: coleta_recursos.cpp  jogar.cpp
source/GameFeatures/Jogar/Fase1/: carrega_unidades.cpp  carregar_fase1.cpp  evolucao.cpp  fase1.cpp  mover_unidade.cpp  verifica_hexagono.cpp
source/GameFeatures/Jogar/Fase2/: carrega_unidades2.cpp  carregar_fase2.cpp  fase2.cpp
source/GameFeatures/Jogar/Fase3/: carrega_unidades3.cpp  carregar_fase3.cpp  fase3.cpp
source/GameFeatures/Jogar/Fase4/: carrega_unidades4.cpp  carregar_fase4.cpp  fase4.cpp
source/GameFeatures/Jogar/Fase5/: carregar_fase5.cpp  fase5.cpp
source/GameFeatures/Menu/: menu.cpp
source/GameFeatures/Opcoes/: opcoes.cpp
source/features/Collision/: collision.cpp
source/features/Input/: input.cpp
source/features/MiscTasks/: audio.cpp  fontes.cpp  misktasks.cpp
source/features/Network/: client.cpp  network.cpp  server.cpp
source/features/RenderWorld/: audio.cpp  draw.cpp  draw.h  load_image.cpp  renderworld.cpp  video.cpp  video.h
source/features/SimulatedWorld/: simulated.cpp
source/features/UpdateObjects/: ataque_unidade.cpp  condicao_fim_do_jogo.cpp  dano_ataque.cpp  mover_unidade.cpp  updateobjects.cpp
source/features/UpdateTime/: update_time.cpp
source/features/time/: time.cpp
testes/: client.cpp  server.cpp
testes/groggystars bitmaps/: teste.cpp
testes/som/: callback.cpp  carrega_som.cpp  main.cpp  sound.h
